# libpixels

./: .gitignore  Cargo.toml  Jenkinsfile  README.md
libpixels/: Cargo.toml
libpixels-builder/: Cargo.toml
libpixels-builder/src/: lib.rs  main.rs
libpixels/src/: lib.rs  world.rs
shared-library-builder/builder/: Cargo.toml
shared-library-builder/builder/src/: main.rs
