[package]
name = "libpixels"
version = "1.1.0"
authors = ["feenk gmbh. <contact@feenk.com>"]
edition = "2021"

[dependencies]
pixels = { git = "https://github.com/parasyte/pixels.git", rev = "860559272a09b1bf2e2a021b627ea33453d7f029" }
raw-window-handle = "0.5"
raw-window-handle-extensions = "0.5"
imgref = "1.9"
euclid = "0.22"
log = "0.4"
env_logger = "0.10"
array-box = "1.0"
value-box = "2.2"
value-box-ffi = { version = "1.1", features = [ "array-box" ] }

[lib]
name = "Pixels"
crate-type = ["cdylib"]
