[package]
name = "libpixels"
version = "1.1.0"
authors = ["feenk gmbh. <contact@feenk.com>"]
edition = "2021"

[dependencies]
pixels = { git = "https://github.com/parasyte/pixels.git", rev = "eede10ba4256644f9286b4377c31eba6ac48538e" }
raw-window-handle = "0.5"
raw-window-handle-extensions = "0.5"
imgref = "1.9"
euclid = "0.22"
log = "0.4"
env_logger = "0.10"
array-box = "1.0"
value-box = "2.2"
value-box-ffi = { version = "1.1", features = [ "array-box" ] }

[lib]
name = "Pixels"
crate-type = ["cdylib"]
